[package]
name = "actix-web-middleware-requestid"
version = "3.0.1"
authors = ["Tim Tonkonogov <tim@tonko.me>"]
edition = "2018"
publish = ["git", "crates-io"]
license = "MIT/Apache-2.0"
description = "Request ID middleware for the actix-web framework v1.0+"
homepage = "https://github.com/tonkonogov/actix-web-middleware-requestid"
documentation = "https://docs.rs/actix-web-middleware-requestid"
repository = "https://github.com/tonkonogov/actix-web-middleware-requestid"
keywords = ["actix-web", "middleware", "requestid"]
readme = "README.md"

[dependencies]
futures = { version = "0.3", default-features = false }
actix-web = { version = "3", default-features = false }
actix-service = "1.0"
rand = { version = "0.7", default-features = false, features = ["std"] }
